--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -8,11 +8,11 @@
   margin: 0;
   padding: 0;
   border: 0;
-  // cursor: none !important;
+  cursor: none !important;
 
-  // &:focus {
-  //   cursor: none !important;
-  // }
+  &:focus {
+    cursor: none !important;
+  }
 }
 
 html, body {
